# thesis

./: .gitignore  .gitmodules  README.md  Thesis.code-workspace  design_space.md  implicit_elaboration.md
elaine/: elaine.cabal
elaine/app/: AST.hs  Main.hs  Parse.hs  Pretty.hs
elaine/app/Elaine/: AST.hs  Desugar.hs  ElabTransform.hs  Eval.hs  Exec.hs  Parse.hs  Pretty.hs  Std.hs  TypeCheck.hs
elaine/examples/: _basics.elaine  _ellelele.elaine  _implicit.elaine  _implicit_elab_mod.elaine  _yield.elaine  abort.elaine  ask.elaine  double_effect.elaine  double_effect_implicit.elaine  elab1.elaine  elab_transformed.elaine  exception.elaine  id.elaine  imports.elaine  local_reader.elaine  local_reader_implicit.elaine  local_reader_transformed.elaine  logic.elaine  logic_once.elaine  match.elaine  safe_division.elaine  state.elaine  structured_logging.elaine  val.elaine
elaine/src/Elaine/: AST.hs  ElabTransform.hs  Eval.hs  Exec.hs  Ident.hs  Parse.hs  Pretty.hs  Row.hs  Std.hs  Transform.hs  TypeCheck.hs  TypeVar.hs  Types.hs
elaine/test/: Examples.hs  Main.hs  TypeCheck.hs
experiments/: except_as_free.hs  state_and_maybe.hs  state_and_maybe2.hs
experiments/koka/: admin0.kk  admin1.kk  admin2.kk  admin3.kk  exception.kk  koka-state-manual.kk  map.kk  return_effect.kk  should_be_pure.kk  sn.kk  state_and_abort.kk  subjump.kk
experiments/lang/app/: AST.hs
first_stage_review/: first.tex
greenlight/: ask.html  index.tex
greenlight/examples/: abort.html  ask.html  double_effect.html  double_effect_implicit.html  exception.html  local_reader.html  local_reader_implicit.html  local_reader_transformed.html
hefty-algebras/src/Examples/: LambdaState.hs
lang/: lang.cabal
lang/app/: AST.hs  Effen.hs  Main  Main.hs
lang/test/: Main.hs
meeting notes/: 2023-06-27.md
papers/: papers.org
spec/: spec.fdb_latexmk  spec.fls  spec.tex
thesis/: Makefile  bibliography.bib  document.sty  index.tex  mscthesis.sty  preamble.tex  thesis.tex
thesis/chapters/: 0_abstract.tex  0_committee.tex  0_metadata.tex  0_preface.tex  1_introduction.tex  2_algebraic_effects.tex  3_higher-order_effects.tex  4_a_tour_of_elaine.tex  5_elaboration_resolution.tex  6_elaboration_compilation.tex  6_spec.tex  7_related_work.tex  8_conclusion.tex  A_elaine_examples.tex  B_spec.tex  background.tex  basics.tex  elaboration_compilation.tex  elaboration_resolution.tex  introduction.tex  metadata.tex  preliminaries.tex  related_work.tex  spec.tex
