cabal-version:      3.4
name:               elaine
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Terts Diepraam
maintainer:         terts.diepraam@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options: -Wall
  default-extensions:  FlexibleInstances

executable elaine
  import:           warnings
  main-is:          Main.hs
  build-depends:    base ^>=4.16.3.0, elaine, pretty-simple
  hs-source-dirs:   app
  default-language: Haskell2010

library
  import:           warnings
  exposed-modules:  Elaine.AST,
                    Elaine.Desugar,
                    Elaine.Parse,
                    Elaine.Pretty,
                    Elaine.Eval,
                    Elaine.Exec,
                    Elaine.ElabTransform,
                    Elaine.Std
  hs-source-dirs:   app
  build-depends:    base ^>=4.16.3.0,
                    containers == 0.6.5.1,
                    megaparsec ^>=9.3.0,
                    ghc-prim == 0.8.0,
                    text == 1.2.5.0,
                    pretty-simple == 4.1.2.0
  default-language: Haskell2010

test-suite test-elaine
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  build-depends:      base,
                      elaine,
                      hspec == 2.10.10,
                      raw-strings-qq == 1.1,
                      text,
